--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,3 @@
-/* Fonts & Tailwind  */
-@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Round");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap");
 @import "tailwindcss";
 
 /* Theme (Tailwind v4) */
@@ -10,7 +5,7 @@
   --font-display: "Lexend", sans-serif;
 
   --color-primary: #28ad00;
-  --color-primary-dark: #1f8a00;
+  --color-primary-dark: #166d00;
   --color-primary-hover: #229400;
   --color-secondary: #facc15;
   --color-secondary-dark: #eab308;
